# ece3091

./: .gitignore  Camera.py  ComputerVision.py  Coordinates.py  DOCUMENTATION.md  Detecting Circles.py  Final_CV.py  HSL.py  Navigation.py  ObtainBallBearingPositions.py  PseudoCode.py  README.md  build.sh  clean.sh  environment.yml  gordon.launch.py  install_dotfiles.sh  install_miniforge3.sh  install_starship.sh  link_dotfiles.sh  main.py  motor.py  ost.yaml  sensor urdf test  sensor.py  server.launch.py  servo.py  test-camera.py  use_scott.sh
.old/: README.md  US urdf  computer_vision.py  ost.txt  solve-camera.py
.old/dotfiles/: bash_profile  bashrc  starship.toml
.old/experiments/: navigation.py  pseudo.py  test_motors.py
.old/experiments/computer_vision/: Camera.py  Train_YoloV3 .ipynb  tiny-yolo-voc-1c.cfg  yolo_object_detection.py
.old/experiments/test_motors/: GPIO.cpp  device.py  test_motors.cpp  test_motors.py
.old/experiments/test_motors_old/: build.sh  test_motors.hpp  test_rotary_encoder.c
.old/experiments/test_swig/: build.sh
.old/gordon_control/: package.xml  setup.py
.old/gordon_control/gordon_control/: drive_controller.py
.old/gordon_hardware_old/: Findpigpio.cmake  package.xml.old
.old/gordon_hardware_old/include/gordon_hardware/: motor.hpp  rotary_encoder.hpp
.old/gordon_hardware_old/src/: motor.cpp  motor_node.cpp  rotary_encoder_node.cpp
.old/notebooks/: example.ipynb
.old/scripts/: install_miniforge.sh
.old/sources/: constants.py  easy_mode.py  to_goal.py  utilities.py
.old/sources/gpio/: Distance.cpp  Distance.hpp  Factory.cpp  Factory.hpp  Makefile  Motor.hpp  Motor.i
dotfiles/: .bashrc  bashrc
experiments/: US Code  motor.py  navigation.py  pins.py  test_motors.py
experiments/computer_vision/: BallBearing_Detection.ipynb  Camera.py  ComputerVision.py  ObtainBallBearingPositions.py
experiments/test_motors/: GPIO.hpp  RotaryEncoder.cpp  build.sh  device.i  device.py
experiments/test_motors_old/: rotary_encoder.c  test_motors.c  test_motors.cpp
experiments/test_swig/: example.cpp  example.i
scripts/: install_miniconda.sh  install_starship.sh  link_dotfiles.sh  use_saad.sh
sources/: README.md  __main__.py  distance_sensor.py  environment.yml  measurements.py  pins.py
sources/drivers/: Motor.cpp  Motor.hpp  RotaryEncoder.hpp
sources/gpio/: Encoder.cpp  Encoder.hpp  Encoder.i  Motor.cpp  __init__.py  gpio.i  gpio.py
src/gordon/: CMakeLists.txt  package.xml
src/gordon_control/: package.xml  setup.cfg  setup.py  state_machine.py
src/gordon_control/gordon_control/controllers/: drive_controller.py  pi_controller.py  pid_controller.py  strategy.py  ultrasonic_controller.py  wheel_controller.py
src/gordon_control/gordon_control/drivers/: gate.py  motor.py  rotary_encoder.py
src/gordon_control/gordon_control/nodes/: drive_controller_node.py  gate_contoller_node.py  gate_controller_node.py  strategy_node.py  ultrasonic_controller_node.py  ultrsonic_controller_node.py  wheel_controller_node.py
src/gordon_description/: CMakeLists.txt  package.xml
src/gordon_description/launch/: view.launch.py
src/gordon_description/rviz/: gordon_description.rviz
src/gordon_description/urdf/: gordon.urdf  gordon_description.urdf  robot.urdf
src/gordon_hardware/: CMakeLists.txt
src/gordon_hardware/include/gordon_hardware/: motor.hpp  rotary_encoder.hpp
src/gordon_hardware/src/: rotary_encoder.cpp
src/gordon_launch/: CMakeLists.txt  package.xml
src/gordon_launch/config/: ekf.yaml
src/gordon_launch/launch/: gordon.launch.py  gordon_camera.launch.py  gordon_control.launch.py  gordon_description.launch.py  gordon_gate.launch.py  gordon_ultrasonic.launch.py  robot.launch.py  run.launch.py  test_camera.launch.py  test_description.launch.py  test_vision.launch.py  workstation.launch.py
src/gordon_robot/: CMakeLists.txt  package.xml
src/gordon_vision/: package.xml  setup.cfg  setup.py
src/gordon_vision/gordon_vision/: point_publisher.py  test_vision.py  vision.py
