<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gordon_launch</name>
  <version>1.0.0</version>
  <description>gordon_launch</description>
  <maintainer email="smoo38@student.monash.edu">Scott Moore</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gordon_description</exec_depend>
  <exec_depend>gordon_hardware</exec_depend>

  <!-- Robot -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <!-- Workstation -->
  <exec_depend>gordon_description</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
