<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gordon_robot</name>
  <version>1.0.0</version>
  <description>gordon_robot</description>
  <maintainer email="smoo38@student.monash.edu">Scott Moore</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gordon_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
