<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gordon_vision</name>
  <version>1.0.0</version>
  <description>gordon_vision</description>
  <maintainer email="smoo38@student.monash.edu">Scott Moore</maintainer>
  <license>MIT</license>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
